falco_plugin_api/src/ffi.rs

#[test]
fn bindgen_test_layout_ss_plugin_table_fieldinfo() {
    const UNINIT: ::std::mem::MaybeUninit<ss_plugin_table_fieldinfo> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ss_plugin_table_fieldinfo>(),
        16usize,
        concat!("Size of: ", stringify!(ss_plugin_table_fieldinfo))
    );
    assert_eq!(
        ::std::mem::align_of::<ss_plugin_table_fieldinfo>(),
        8usize,
        concat!("Alignment of ", stringify!(ss_plugin_table_fieldinfo))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_fieldinfo),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).field_type) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_fieldinfo),
            "::",
            stringify!(field_type)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).read_only) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_fieldinfo),
            "::",
            stringify!(read_only)
        )
    );
}
pub type ss_plugin_table_t = ::std::os::raw::c_void;
pub type ss_plugin_table_entry_t = ::std::os::raw::c_void;
pub type ss_plugin_table_field_t = ::std::os::raw::c_void;
pub type ss_plugin_owner_t = ::std::os::raw::c_void;
pub type ss_plugin_t = ::std::os::raw::c_void;
pub type ss_instance_t = ::std::os::raw::c_void;
pub const ss_plugin_log_severity_SS_PLUGIN_LOG_SEV_FATAL: ss_plugin_log_severity = 1;
pub const ss_plugin_log_severity_SS_PLUGIN_LOG_SEV_CRITICAL: ss_plugin_log_severity = 2;
pub const ss_plugin_log_severity_SS_PLUGIN_LOG_SEV_ERROR: ss_plugin_log_severity = 3;
pub const ss_plugin_log_severity_SS_PLUGIN_LOG_SEV_WARNING: ss_plugin_log_severity = 4;
pub const ss_plugin_log_severity_SS_PLUGIN_LOG_SEV_NOTICE: ss_plugin_log_severity = 5;
pub const ss_plugin_log_severity_SS_PLUGIN_LOG_SEV_INFO: ss_plugin_log_severity = 6;
pub const ss_plugin_log_severity_SS_PLUGIN_LOG_SEV_DEBUG: ss_plugin_log_severity = 7;
pub const ss_plugin_log_severity_SS_PLUGIN_LOG_SEV_TRACE: ss_plugin_log_severity = 8;
pub type ss_plugin_log_severity = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ss_plugin_table_fields_vtable {
    pub list_table_fields: ::std::option::Option<
        unsafe extern "C" fn(
            t: *mut ss_plugin_table_t,
            nfields: *mut u32,
        ) -> *const ss_plugin_table_fieldinfo,
    >,
    pub get_table_field: ::std::option::Option<
        unsafe extern "C" fn(
            t: *mut ss_plugin_table_t,
            name: *const ::std::os::raw::c_char,
            data_type: ss_plugin_state_type,
        ) -> *mut ss_plugin_table_field_t,
    >,
    pub add_table_field: ::std::option::Option<
        unsafe extern "C" fn(
            t: *mut ss_plugin_table_t,
            name: *const ::std::os::raw::c_char,
            data_type: ss_plugin_state_type,
        ) -> *mut ss_plugin_table_field_t,
    >,
}
#[test]
fn bindgen_test_layout_ss_plugin_table_fields_vtable() {
    const UNINIT: ::std::mem::MaybeUninit<ss_plugin_table_fields_vtable> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ss_plugin_table_fields_vtable>(),
        24usize,
        concat!("Size of: ", stringify!(ss_plugin_table_fields_vtable))
    );
    assert_eq!(
        ::std::mem::align_of::<ss_plugin_table_fields_vtable>(),
        8usize,
        concat!("Alignment of ", stringify!(ss_plugin_table_fields_vtable))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).list_table_fields) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_fields_vtable),
            "::",
            stringify!(list_table_fields)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_table_field) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_fields_vtable),
            "::",
            stringify!(get_table_field)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).add_table_field) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_fields_vtable),
            "::",
            stringify!(add_table_field)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ss_plugin_table_fields_vtable_ext {
    pub list_table_fields: ::std::option::Option<
        unsafe extern "C" fn(
            t: *mut ss_plugin_table_t,
            nfields: *mut u32,
        ) -> *const ss_plugin_table_fieldinfo,
    >,
    pub get_table_field: ::std::option::Option<
        unsafe extern "C" fn(
            t: *mut ss_plugin_table_t,
            name: *const ::std::os::raw::c_char,
            data_type: ss_plugin_state_type,
        ) -> *mut ss_plugin_table_field_t,
    >,
    pub add_table_field: ::std::option::Option<
        unsafe extern "C" fn(
            t: *mut ss_plugin_table_t,
            name: *const ::std::os::raw::c_char,
            data_type: ss_plugin_state_type,
        ) -> *mut ss_plugin_table_field_t,
    >,
}
#[test]
fn bindgen_test_layout_ss_plugin_table_fields_vtable_ext() {
    const UNINIT: ::std::mem::MaybeUninit<ss_plugin_table_fields_vtable_ext> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ss_plugin_table_fields_vtable_ext>(),
        24usize,
        concat!("Size of: ", stringify!(ss_plugin_table_fields_vtable_ext))
    );
    assert_eq!(
        ::std::mem::align_of::<ss_plugin_table_fields_vtable_ext>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(ss_plugin_table_fields_vtable_ext)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).list_table_fields) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_fields_vtable_ext),
            "::",
            stringify!(list_table_fields)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_table_field) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_fields_vtable_ext),
            "::",
            stringify!(get_table_field)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).add_table_field) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_fields_vtable_ext),
            "::",
            stringify!(add_table_field)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ss_plugin_table_reader_vtable {
    pub get_table_name: ::std::option::Option<
        unsafe extern "C" fn(t: *mut ss_plugin_table_t) -> *const ::std::os::raw::c_char,
    >,
    pub get_table_size:
        ::std::option::Option<unsafe extern "C" fn(t: *mut ss_plugin_table_t) -> u64>,
    pub get_table_entry: ::std::option::Option<
        unsafe extern "C" fn(
            t: *mut ss_plugin_table_t,
            key: *const ss_plugin_state_data,
        ) -> *mut ss_plugin_table_entry_t,
    >,
    pub read_entry_field: ::std::option::Option<
        unsafe extern "C" fn(
            t: *mut ss_plugin_table_t,
            e: *mut ss_plugin_table_entry_t,
            f: *const ss_plugin_table_field_t,
            out: *mut ss_plugin_state_data,
        ) -> ss_plugin_rc,
    >,
}
#[test]
fn bindgen_test_layout_ss_plugin_table_reader_vtable() {
    const UNINIT: ::std::mem::MaybeUninit<ss_plugin_table_reader_vtable> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ss_plugin_table_reader_vtable>(),
        32usize,
        concat!("Size of: ", stringify!(ss_plugin_table_reader_vtable))
    );
    assert_eq!(
        ::std::mem::align_of::<ss_plugin_table_reader_vtable>(),
        8usize,
        concat!("Alignment of ", stringify!(ss_plugin_table_reader_vtable))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_table_name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_reader_vtable),
            "::",
            stringify!(get_table_name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_table_size) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_reader_vtable),
            "::",
            stringify!(get_table_size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_table_entry) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_reader_vtable),
            "::",
            stringify!(get_table_entry)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).read_entry_field) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_reader_vtable),
            "::",
            stringify!(read_entry_field)
        )
    );
}
pub type ss_plugin_table_iterator_state_t = ::std::os::raw::c_void;
pub type ss_plugin_table_iterator_func_t = ::std::option::Option<
    unsafe extern "C" fn(
        s: *mut ss_plugin_table_iterator_state_t,
        e: *mut ss_plugin_table_entry_t,
    ) -> ss_plugin_bool,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ss_plugin_table_reader_vtable_ext {
    pub get_table_name: ::std::option::Option<
        unsafe extern "C" fn(t: *mut ss_plugin_table_t) -> *const ::std::os::raw::c_char,
    >,
    pub get_table_size:
        ::std::option::Option<unsafe extern "C" fn(t: *mut ss_plugin_table_t) -> u64>,
    pub get_table_entry: ::std::option::Option<
        unsafe extern "C" fn(
            t: *mut ss_plugin_table_t,
            key: *const ss_plugin_state_data,
        ) -> *mut ss_plugin_table_entry_t,
    >,
    pub read_entry_field: ::std::option::Option<
        unsafe extern "C" fn(
            t: *mut ss_plugin_table_t,
            e: *mut ss_plugin_table_entry_t,
            f: *const ss_plugin_table_field_t,
            out: *mut ss_plugin_state_data,
        ) -> ss_plugin_rc,
    >,
    pub release_table_entry: ::std::option::Option<
        unsafe extern "C" fn(t: *mut ss_plugin_table_t, e: *mut ss_plugin_table_entry_t),
    >,
    pub iterate_entries: ::std::option::Option<
        unsafe extern "C" fn(
            t: *mut ss_plugin_table_t,
            it: ss_plugin_table_iterator_func_t,
            s: *mut ss_plugin_table_iterator_state_t,
        ) -> ss_plugin_bool,
    >,
}
